# SurvivorsQuest

./: CMakeLists.txt  JsonFieldMediator.cpp  PlayerInfoWindow.ui  ProjectResources.qrc  PromptDialog.cpp  PublicIpAddressFetcher.h  README.md  SessionManager.cpp  SessionUtilities.cpp  SessionUtilities.h  SurvivorsQuest.pro  SurvivorsQuest_ua.ts  mainwindow.ui
Style/: MainStyle.qss
app/: CMakeLists.txt
app/classes/headers/: DeviceController.h  JsonFieldMediator.h  PlayerEntry.h  PlayerInfoWidget.h  PlayerInfoWindow.h  PromptDialog.h  PublicIpAddressFetcher.h  SessionManager.h  SessionUtilities.h  mainwindow.h
app/classes/sources/: DeviceController.cpp  PlayerEntry.cpp  PlayerInfoWidget.cpp  PlayerInfoWindow.cpp  PromptDialog.cpp  PublicIpAddressFetcher.cpp  SessionManager.cpp  main.cpp  mainwindow.cpp
app/resources/: ProjectResources.qrc
app/resources/style/: MainStyle.qss
app/ui/: PlayerInfoWidget.ui  mainwindow.ui
